--- a/package.json
+++ b/package.json
@@ -12,17 +12,24 @@
     "dev": "nodemon --experimental-modules index.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cache-manager": "^4.1.0",
+    "cache-manager-redis-store": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "express": "^4.18.2",
+    "express": "~4.17.1",
     "express-async-errors": "^3.1.1",
-    "mongodb": "^4.13.0"
+    "mongodb": "^4.13.0",
+    "node-redis-scan": "^1.3.6",
+    "redis": "^4.6.10",
+    "superagent": "~0.17.0",
+    "valence": "~1.0.3"
   },
   "devDependencies": {
     "eslint": "^8.0.0",
     "husky": "^7.0.2",
     "lint-staged": "^11.2.3",
-    "nodemon": "^2.0.12",
+    "nodemon": "^2.0.22",
     "prettier": "^2.4.1"
   },
   "husky": {
