--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dev": "nodemon --experimental-modules index.js"
   },
   "dependencies": {
+    "@notionhq/client": "^2.2.7",
     "bcryptjs": "^2.4.3",
     "cache-manager": "^4.1.0",
     "cache-manager-redis-store": "^2.0.0",
@@ -19,12 +20,12 @@
     "dotenv": "^8.2.0",
     "express": "~4.17.1",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^4.13.0",
     "node-redis-scan": "^1.3.6",
     "redis": "^4.6.10",
     "superagent": "~0.17.0",
-    "valence": "~1.0.3",
-    "@notionhq/client": "^2.2.7"
+    "valence": "~1.0.3"
   },
   "devDependencies": {
     "eslint": "^8.0.0",
