--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "dotenv": "^8.2.0",
     "express": "~4.17.1",
     "express-async-errors": "^3.1.1",
+    "express-mongo-sanitize": "^2.2.0",
     "jsonwebtoken": "^9.0.2",
+    "mongo-sanitize": "^1.1.0",
     "mongodb": "^4.13.0",
     "node-redis-scan": "^1.3.6",
     "redis": "^4.6.10",
